Made some new changes to the images of the upload page

--- a/ModelProject/Components/Pages/ModelPage.razor
+++ b/ModelProject/Components/Pages/ModelPage.razor
@@ -68,7 +68,7 @@ else
         digitalModel = await ModelProvider.GetModelByIdAsync(ModelId);
         if (digitalModel != null)
         {
-            imageFiles = digitalModel.Images.Split(',').ToList();
+            imageFiles = digitalModel.ImageUrl.Split(',').ToList();
             modelFiles = digitalModel.ModelFiles.Split(',').ToList();
         }
     }
