--- a/ModelProject/Components/Pages/Profile.razor
+++ b/ModelProject/Components/Pages/Profile.razor
@@ -36,7 +36,7 @@
                 {
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <img src="@GetFirstImage(model.Images)" class="card-img-top" alt="@model.Title Image" />
+                            <img src="@GetFirstImage(model.ImageUrl)" class="card-img-top" alt="@model.Title Image" />
                             <div class="card-body">
                                 <h5 class="card-title">@model.Title</h5>
                                 <p class="card-text"><strong>Category:</strong> @model.Category</p>
