The images fully work

--- a/ModelProject/Components/Layout/MainLayout.razor
+++ b/ModelProject/Components/Layout/MainLayout.razor
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container">
-        <a class="navbar-brand bg-dark text-white" href="/">My Project</a>
+        <img src="/img/APLOGO.png" class="rounded mx-auto d-block" height="75" alt="AP" style="max-height:100%; max-width:100%;" />
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
