--- a/ModelProject/Components/Pages/Home.razor
+++ b/ModelProject/Components/Pages/Home.razor
@@ -25,7 +25,7 @@ else
             {
                 <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
                     <div class="card">
-                        <img src="/img/digitalmodels/Model.ImageUrl" class="card-img-top p-1" alt="@model.Title" onerror="this.onerror = null; this.src='/img/no_cheese.png'">
+                        <img src="/img/digitalmodels/@model.ImageUrl" class="img-thumbnail" alt="@model.Title" onerror="this.onerror = null; this.src='/img/no_digitalmodels.png'">
                         <div class="card-body">
                             <h5 class="card-title">@model.Title</h5>
                             <p class="card-text">@model.Category</p>
@@ -55,6 +55,7 @@ else
 
 @code
 {
+    private string[] imageUrl = [];
 
     private IEnumerable<DigitalModel> digitalmodel;
     private string searchTerm = "";
