--- a/ModelProject/Components/Layout/MainLayout.razor
+++ b/ModelProject/Components/Layout/MainLayout.razor
@@ -27,9 +27,9 @@
             <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
                 <AuthorizeView>
                     <Authorized>
-                        <li class="navbar-text"> @context.User.Identity?.Name </li>
+                        <li class="navbar text-white"> @context.User.Identity?.Name </li>
                         <li class="nav-item">
-                            <NavLink class="nav-link" href="/Account/Logout" Match="NavLinkMatch.All">Logout</NavLink>
+                            <NavLink class="nav-link text-white" href="/Account/Logout" Match="NavLinkMatch.All">Logout</NavLink>
                         </li>
                     </Authorized>
                     <NotAuthorized>
