I'm starting on creating a download system.

--- a/ModelProject/Components/Pages/Upload.razor
+++ b/ModelProject/Components/Pages/Upload.razor
@@ -13,6 +13,7 @@
 @inject NavigationManager NavigationManager
 @inject FileUploader FileUploader
 @inject UserManager<User> userManager;
+@inject ModelFileProvider ModelFileProvider
 
 @*Checks if the user is signed in*@
 <AuthorizeView>
