--- a/ModelProject/Components/Pages/ModelPage.razor
+++ b/ModelProject/Components/Pages/ModelPage.razor
@@ -4,6 +4,7 @@
 @inject NavigationManager NavigationManager
 @inject ModelFileProvider ModelFileProvider
 
+
 <PageTitle>Model Details</PageTitle>
 
 @*If models are missing it will display Loading*@
@@ -24,6 +25,15 @@ else
                         {
                             <img src="/img/digitalmodels/@digitalModel.ImageUrl" class="img-thumbnail" alt="@digitalModel.Title" onerror="this.onerror = null; this.src='/img/no_digitalmodels.png'">
                         }
+
+                        @foreach (var file in modelFiles)
+                        {
+                            <li class="mb-2">
+                                <a class="btn btn-success" href="@ModelFileProvider.GetDownloadLink(file)" download="@file">
+                                    <i class="bi bi-download"></i> Download @file
+                                </a>
+                            </li>
+                        }
                     </div>
                     
                 </div>
@@ -36,7 +46,7 @@ else
                 <p><strong>Description:</strong> @digitalModel.Description</p>
                 <p><strong>Downloads:</strong> @digitalModel.Downloads</p>
                 <p><strong>File Size:</strong> @digitalModel.FileSize MB</p>
-                <button @onclick="DownloadModelFile">Download Model</button>
+               
 
                 @*Redirects the user to the homepage if they press the button*@
                 <button @onclick="NavigateToHome" class="btn btn-secondary ms-2">Back to Home</button>
@@ -64,26 +74,14 @@ else
     private List<string> imageFiles = new();
     private List<string> modelFiles = new();
 
-    private async Task DownloadModelFile()
-    {
-        try
-        {
-            await ModelFileProvider.DownloadModelFileAsync("/api/modelfile/download/modelfile");
-
-        }
-        catch (Exception ex)
-        {
-            Console.Error.WriteLine(ex.Message);
-        }
-    }
 
     protected override async Task OnInitializedAsync()
     {
         digitalModel = await ModelProvider.GetModelByIdAsync(ModelId);
         if (digitalModel != null)
         {
-            imageFiles = digitalModel.ImageUrl.Split(',').ToList();
             modelFiles = digitalModel.ModelFiles.Split(',').ToList();
+            imageFiles = digitalModel.ImageUrl.Split(',').ToList();
         }
     }
 
